--- a/nacos-property-spring-boot-core/pom.xml
+++ b/nacos-property-spring-boot-core/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>io.github.photowey</groupId>
         <artifactId>nacos-property-spring-boot-refresher</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>nacos-property-spring-boot-core</artifactId>
