--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>io.github.photowey</groupId>
     <artifactId>nacos-property-spring-boot-refresher</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>spring-boot-properties-refresher project for Spring Boot</description>
